# cpp-otus.final-project

./: .gitignore  Readme.md  description.md  implementation.md  project-plan.md
LispEngine/: CMakeLists.txt  main.cpp
LispEngine/src/: Arguments.h  BaseFunctions.h  Global.h  LispEngine.h  Printer.h  StrTemplate.h  System.h  configure.h.in  errors.h  general-types.h  main.cpp  repl.h  share-base.h  share.h  test.h  tests.cpp
LispEngine/src/base/: Global.h  errors.h  forward-declarations.h  general-types.h  share-base.h  share.h
LispEngine/src/implements/: DataStructs.h  DiBuilder.h  data-structs.h
LispEngine/src/implements/core/: LispEngine.h  Printer.h  Reader.h  Repl.h  data-structs.h
LispEngine/src/implements/core/evaluator/: BaseFunctions.h  CallResult.h  Core.h  Evaluator.h  Program.h  RunContext.h  Scope.h  program-structs.h
LispEngine/src/implements/evaluator/: CallResult.h  Core.h  Evaluator.h  Program.h  Reader.h  RunContext.h  Scope.h
LispEngine/src/interfaces/: DataStructs.h  IDIBuilder.h  ILispEngine.h  ILispFunction.h  i-data-structs.h
LispEngine/src/interfaces/core/: ILispEngine.h  ILispFunction.h  IReader.h  IRepl.h  i-data-structs.h
LispEngine/src/interfaces/core/evaluator/: ICallResult.h  IEvaluator.h  IProgram.h  IRunContext.h  IScope.h  i-program-structs.h
LispEngine/src/interfaces/evaluator/: ICallResult.h  IEvaluator.h  IProgram.h  IReader.h  IRunContext.h  IScope.h
LispEngine/src/utils/strings/: StrTemplate.h
LispEngine/src/utils/system/: System.h
LispEngine/tests/: tests.cpp
LispEngine/tests/fixtures/: for-load-trivial.lisp  load-with-print.lisp
docs/: internal.md  presentation.md
docs/diagrams/: LispEngine.vpp  LispInterpreter.vpp  LispInterpreter.vpp.bak_034d  LispInterpreter.vpp.bak_035d  LispInterpreter.vpp.bak_036d  LispInterpreter.vpp.bak_037d  LispInterpreter.vpp.bak_038d  LispInterpreter.vpp.bak_039d  LispInterpreter.vpp.bak_040d  LispInterpreter.vpp.bak_041d  LispInterpreter.vpp.bak_042d  LispInterpreter.vpp.bak_043d  LispInterpreter.vpp.bak_044d  LispInterpreter.vpp.bak_045d  LispInterpreter.vpp.bak_046d  LispInterpreter.vpp.bak_047d  LispInterpreter.vpp.bak_048d  LispInterpreter.vpp.bak_049d  LispInterpreter.vpp.bak_050d  LispInterpreter.vpp.bak_051d  LispInterpreter.vpp.bak_052d  LispInterpreter.vpp.bak_053d  LispInterpreter.vpp.bak_054d  LispInterpreter.vpp.bak_055d  LispInterpreter.vpp.bak_056d  LispInterpreter.vpp.bak_057d  LispInterpreter.vpp.bak_058d  LispInterpreter.vpp.bak_059d  LispInterpreter.vpp.bak_060d  LispInterpreter.vpp.bak_061d  LispInterpreter.vpp.bak_062f  LispInterpreter.vpp.bak_063d  LispInterpreter.vpp.bak_064d  LispInterpreter.vpp.bak_065d  LispInterpreter.vpp.bak_066d  LispInterpreter.vpp.bak_067d  LispInterpreter.vpp.bak_068d
